Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Digital_Audience_Analysis__c.object
<CustomObject>
    <description>Used by ATC to request and track a dealer&apos;s website analysis</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dealer the DAA Request is for</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>DAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>Is there any other relevant information?</inlineHelpText>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_of_Potential_Upsell__c</fullName>
        <inlineHelpText>Dollar amount of potential upsell</inlineHelpText>
        <label>Amount of Potential Upsell</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Analysis_Purpose__c</fullName>
        <label>Analysis Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Potential Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save (Revenue in Jeopardy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articulating Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Understanding of Online Traffic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cars_Sold_per_Month_New__c</fullName>
        <inlineHelpText>Average number of new cars sold per month</inlineHelpText>
        <label>Cars Sold per Month - New</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cars_Sold_per_Month_Used__c</fullName>
        <inlineHelpText>Average number of used cars sold per month.</inlineHelpText>
        <label>Cars Sold per Month - Used</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact who will tag the dealer site(s).</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Digital_Audience_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Comments__c</fullName>
        <inlineHelpText>Does the dealer use custom comments?</inlineHelpText>
        <label>Custom Comments</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAA_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id,&quot;DAA&quot; &amp; &quot; - &quot; &amp; Account__r.Name &amp; &quot; - &quot; &amp; TEXT(DATEVALUE(CreatedDate)),&quot;_self&quot;)</formula>
        <label>DAA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Website_Provider_If_Other__c</fullName>
        <label>Dealer Website Provider (If Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Website__c</fullName>
        <formula>Account__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_s_Position_in_the_Market__c</fullName>
        <inlineHelpText>Example: Top 5 BMW dealer</inlineHelpText>
        <label>Dealer&apos;s Position in the Market</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivered_to_Customer_Date__c</fullName>
        <description>Follow Up Date is required if you have selected Follow Up Required.</description>
        <inlineHelpText>You must enter the date you have delivered the DAA to the customer.</inlineHelpText>
        <label>Delivered to Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Follow Up Required is selected only when a follow up date is entered for a DAA</description>
        <inlineHelpText>If selecting this checkbox please fill out the Follow Up Date needed.</inlineHelpText>
        <label>Follow-Up Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Help__c</fullName>
        <formula>IF (
   RecordType.Name=&quot;Incomplete Request&quot;,
   IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000000g6KB&quot;, &quot;*&quot;, 16, 16) &amp; &quot; All fields under the DAA Section are required to submit this form.  Once complete, your order will be submitted.  You are required to attach documentation.&quot;,

   IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000000g6RX&quot;, &quot;*&quot;, 16, 16) &amp; &quot; Form Submission criteria has been met. Please check the status of your record for more details.&quot;
)</formula>
        <label>Form Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeNet_Dealer__c</fullName>
        <label>HomeNet Dealer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incomplete_Reason_Comment__c</fullName>
        <label>Incomplete Reason Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incomplete_Reason__c</fullName>
        <label>Incomplete Reason</label>
        <picklist>
            <controllingField>Stage__c</controllingField>
            <picklistValues>
                <fullName>Tagging Agreement Missing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altered Tagging Agreement Altered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagging Agreement not Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internet_Websites_If_Other__c</fullName>
        <inlineHelpText>you must enter information if you selected &quot;Other&quot; for Internet websites.</inlineHelpText>
        <label>Internet Websites (If Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Websites__c</fullName>
        <label>Internet Websites Used</label>
        <picklist>
            <picklistValues>
                <fullName>Cars.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craig&apos;s List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBay Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edmunds.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Large_Events__c</fullName>
        <inlineHelpText>in the past three months did the dealer have any events such as large sales or &quot;tent&quot; events?</inlineHelpText>
        <label>Large Events?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lot_Size_New__c</fullName>
        <formula>Account__r.Lot_Size_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Size - New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Size_Used__c</fullName>
        <formula>Account__r.Lot_Size_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Size - Used</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Competitors__c</fullName>
        <inlineHelpText>Who are their major competitors?</inlineHelpText>
        <label>Major Competitors</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offline_Advertising_If_Other__c</fullName>
        <inlineHelpText>List of other offline advertising methods. you must enter information if you selected &quot;Other&quot;.</inlineHelpText>
        <label>Offline Advertising (If Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offline_Advertising__c</fullName>
        <inlineHelpText>What types of offline advertising has the dealer done over the past three months?</inlineHelpText>
        <label>Offline Advertising?</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Mailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>On_My_Team__c</fullName>
        <formula>IF (CreatedById = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On My Team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_DAA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to associate similar DAA records. Similar to Related Case.</inlineHelpText>
        <label>Parent DAA</label>
        <referenceTo>Digital_Audience_Analysis__c</referenceTo>
        <relationshipLabel>Related DAA</relationshipLabel>
        <relationshipName>Digital_Audience_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Vehicle_Images__c</fullName>
        <inlineHelpText>Does this dealer use images of actual vehicle being sold?  (Not stock images)</inlineHelpText>
        <label>Quality Vehicle Images</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recent_Downgrades__c</fullName>
        <inlineHelpText>In the past three months has the dealer downgraded or upgraded products?  (Excluding Spotlights and Power Packs)</inlineHelpText>
        <label>Recent Package Changes?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEM_or_SEO__c</fullName>
        <description>Does the Dealer Use SEM or SEO to Advertise?</description>
        <label>SEM or SEO?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVOC_ID__c</fullName>
        <formula>Account__r.SVOC_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVOC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_Pricing__c</fullName>
        <inlineHelpText>Does the dealer price inventory the same across all advertising media and in store?</inlineHelpText>
        <label>Same Pricing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Contact_Email__c</fullName>
        <inlineHelpText>Email address of of who will tag the site</inlineHelpText>
        <label>Site Contact Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA Ready</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tagging_Agreement__c</fullName>
        <label>Tagging Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not attached</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VinSolutions_Website_Time__c</fullName>
        <label>VinSolutions Website Time</label>
        <picklist>
            <controllingField>VinSolutions_Website__c</controllingField>
            <picklistValues>
                <fullName>Greater than 4 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 4 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VinSolutions_Website__c</fullName>
        <label>VinSolutions Website Only?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website_Domains__c</fullName>
        <inlineHelpText>URLs to tag</inlineHelpText>
        <label>Website Domain(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_Will_Tag_Site__c</fullName>
        <inlineHelpText>First and Last name of who will tag the site</inlineHelpText>
        <label>Site Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Digital Audience Analysis</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>DAA_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DAA_Complete_Digital_Audience_Analysis</fullName>
        <filterScope>Queue</filterScope>
        <label>DAA Complete</label>
        <queue>DAA_Complete</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAA_In_Progress_Digital_Audience_Analysis</fullName>
        <filterScope>Queue</filterScope>
        <label>DAA In Progress</label>
        <queue>DAA_In_Progress</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAA_Incomplete_Digital_Audience_Analysis</fullName>
        <filterScope>Queue</filterScope>
        <label>DAA Incomplete</label>
        <queue>DAA_Incomplete</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>DAA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Audience Analyses</pluralLabel>
    <recordTypes>
        <fullName>Complete_Request</fullName>
        <active>true</active>
        <label>Complete Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incomplete_Request</fullName>
        <active>true</active>
        <description>Default record type, certain fields need to be completed in order to submit to DAA Team</description>
        <label>Incomplete Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resubmit_Order</fullName>
        <active>true</active>
        <description>record type to resubmit Incomplete Orders</description>
        <label>Resubmit Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Follow_Up_Required</fullName>
        <active>true</active>
        <errorConditionFormula>And(
Follow_Up_Required__c = True, OR(ISNULL(Delivered_to_Customer_Date__c), TODAY()&gt; Delivered_to_Customer_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Delivered_to_Customer_Date__c</errorDisplayField>
        <errorMessage>If Follow-Up Required is checked, then a Follow-Up Date greater than today is required.</errorMessage>
    </validationRules>
</CustomObject>